--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <h2>Calculate Something!</h2>
         <main>
             <div><input type="text" id="calc-display">
-                <!-- <input type="button" id="submit" value="Submit"> -->
+                <input type="button" id="clear" value="Clear">
+                <input type="button" id="back" value="Backspace">
                 <section class="calculator">
                     <input type="button" value="1" class="digits">
                     <input type="button" value="2" class="digits">
@@ -21,10 +22,10 @@
                     <input type="button" value="8" class="digits">
                     <input type="button" value="9" class="digits">
                     <input type="button" value="0" class="digits">
-                    <input type="button" value="+" class="digits">
-                    <input type="button" value="-" class="digits">
-                    <input type="button" value="*" class="digits">
-                    <input type="button" value="/" class="digits">
+                    <input type="button" value="+" class="digits operators">
+                    <input type="button" value="-" class="digits operators">
+                    <input type="button" value="*" class="digits operators">
+                    <input type="button" value="/" class="digits operators">
                     <input type="button" value="=" id="submit">
                 </section>
             </div>
